# SURGEON

./: .gitignore  Dockerfile  README.md  arm-linux-gnueabihf.ini  compose.yaml  meson.options
docker/: ghidrathon-entrypoint.sh  runner-entrypoint.sh
src/autogen/: autogen.py  requirements.txt
src/ghidrathon/: basic_blocks.py  hal.py  requirements.txt
src/rewriter/: efelf.py  halinstrumentor.py  requirements.txt  transplantationinstrumentor.py
src/runtime/: hacl_stubs.c  meson.build  runtime.c
src/runtime/handlers/: meson.build
src/runtime/handlers/camera_icp/: camera_icp_setup.c  meson.build
src/runtime/include/surgeon/: runtime.h
