
option('firmware', type : 'string', 
       value : 'p2im/console',
       description : 'Choose which firmware to build.'
)

option('coverage', type : 'boolean', value : true, description : 
       'Choose whether to build with coverage report or not. ' + 
       'Value true for coverage, false without.'
)

